--- a/rancher-demo/values.yaml
+++ b/rancher-demo/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: chrisurwin/rancher-demo
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
