--- a/rancher-demo/values.yaml
+++ b/rancher-demo/values.yaml
@@ -40,7 +40,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: test.rancher-demo.192.168.0.7.xip.io
       paths: ["/"]
   tls: []
   #  - secretName: chart-example-tls
